--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,15 @@
 layout: default
 ---
 
+<div class="row g-5 mb-5">
+  <div class="col-md-6">
+    <img src="{{ site.github.url }}/assets/img/home.jpg" alt="Home" width="100%">
+  </div>
+   <div class="col-md-6">
+    {{ content }}
+  </div>
+</div>
+
 {% include contact.html %}
 
 <div class="row g-5 mb-5">
