--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,7 @@
 				<ul>
 					<li>Email: <a href="mailto:{{site.data.settings.email}}">{{site.data.settings.email}}</a></li>
 					<li>Phone: {{site.data.settings.phone}}</li>
-					<li>Laboratory: {{site.data.settings.laboratory}} {{site.data.settings.institution_address}}</li>
+					<li>Office: {{site.data.settings.office}} {{site.data.settings.institution_address}}</li>
 				</ul>          
 	</div>
 </div>
