--- a/_includes/person_contact.html
+++ b/_includes/person_contact.html
@@ -4,4 +4,4 @@
 #### Contact
 
 - Email: [{{person.email}}](mailto:{{person.email}})
-- laboratory: {{person.laboratory}}
+- office: {{person.office}}
