--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 ---
+<div class="row g-5 mb-5">
+   <div class="col-md-6">
+    {{ content }}
+  </div>
+</div>
 
 {% include contact.html %}
 
