--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 <div class="row g-5 mb-5">
+  <div class="col-md-6">
+  </div>
    <div class="col-md-6">
     {{ content }}
   </div>
